--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-	--background: rgba(240, 73, 38, .97);
+	--background: rgba(240, 73, 38, 0.97);
 }
 
 *,
@@ -9,8 +9,8 @@
 }
 
 .logo {
-	height: 65px;
-	width: 350px;
+	height: 55px;
+	width: 280px;
 	margin: 2em 2em 2em 2em;
 }
 
@@ -142,18 +142,27 @@ nav a:hover {
 	margin-top: 20px;
 }
 
-.container {
-	display: grid;
-	/* grid-template-columns: repeat(2, 0.2fr); */
-	grid-template-columns: repeat(2, minmax(100px, 0.2fr));
-	display: grid;
-	grid-template-rows: 1fr;
-	align-items: center;
-	justify-content: center;
-	gap: 20px 200px;
+@media (min-width: 150px) {
+	
+
+	.container {
+		/* border: 10px solid green; */
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
+		align-items: center;
+		justify-content: center;
+		grid-gap: 2em;
+		margin: 5%;
+		padding: 3em;
+		max-width: 120%;
+
+	}
 }
+
+
+
 .box {
-	max-width: 150%;
+	max-width: 80%;
 	/* border: 10px solid green; */
 	align-self: center;
 	justify-self: center;
@@ -175,6 +184,7 @@ nav a:hover {
 	}
 
 	.logo {
+		
 		grid-column: 1 / 3;
 	}
 	nav {
@@ -355,7 +365,7 @@ nav a:hover {
 } */
 
 .footer-container {
-	background-color: rgb(255, 248, 243)
+	background-color: rgb(255, 248, 243);
 }
 .footer {
 	color: rgb(68, 62, 62);
